# TVBToolkit

./: .gitignore  PARITY_REPORT.md  README.md  environment.yml  pyproject.toml
docs/: BRAIN_ACT_DATA_AUDIT.md  BRAIN_ACT_MASK_PARITY.md  IMPLEMENTATION_LOG.md  REPO_BOOTSTRAP_GUIDE.md  brain_states_multimodal_research.md  brian_mf_legacy_mapping.md  cnrs_external_data_layout.md  condition_b_downstream_analysis_protocol.md  fig7_k4_trace_vs_tvbtoolkit.md  luppi_2022_fig1_4_doc_reproduction_plan.md  new_doc_brain_states_audit.md  parity_analysis.md  parity_analysis_brain_act.md  phiid_empirical_bold_audit.md  surface_adex_simulations.md
examples/: adex_single_region_demo.py  brain_act_structural_demo.py  brain_act_subject_batch_demo.py  complexity_demo.py  surface_adex_demo.py  whole_brain_demo.py
hpc/: create_conda_env.sh  slurm_env.sh  smoke_test_login.sh  submit_02_spontaneous_condition_b.sh  submit_02_spontaneous_shared_b.sh  submit_03_pci_condition_b.sh  submit_03_pci_shared_b.sh  submit_04_brain_states_condition_b.sh  submit_04_brain_states_shared_b.sh  submit_05_lzc_condition_b.sh  submit_05_lzc_shared_b.sh  submit_06_pci_analysis_condition_b.sh  submit_06_pci_analysis_shared_b.sh  submit_serotonergic_pci_emcs_robustness.sh  submit_serotonergic_pci_full.sh
notebooks/: 01_mean_field_sim_test.py  01_mean_field_sim_test_new.py  02_full_noise_sims_rates_bold.py  03_pci_trial_sims_hybrid.py  04_brain_states_analysis_pub.py  05_lzc_analysis_pub.py  06_pci_analysis_pub.py  07_pci_stim_sensitivity_tutorial.ipynb  08_pci_b_state_test.py  b_sweep_snn_mf_whole_brain.ipynb  bivariate_var_phiid_noise_sweep.ipynb  pooled_brain_states.ipynb  (+27 more)
(+167 files in other folders)
