[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvbtoolkit"
version = "0.1.0"
description = "A clean whole-brain and single-region simulation toolbox built on TVB and Brian2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TVBToolkit contributors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "numba>=0.59",
  "brian2>=2.5",
  "tvb-library>=2.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
