[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvbtoolkit"
version = "0.1.0"
description = "A clean whole-brain and single-region simulation toolbox built on TVB and Brian2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TVBToolkit contributors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "numba>=0.59",
  "brian2>=2.5",
  "tqdm>=4.66",
  "tvb-library>=2.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
notebooks = [
  "ipykernel>=6",
  "jupyterlab>=4",
]
neuro = [
  "networkx>=3",
  "nibabel>=5",
  "nilearn>=0.10",
  "neuromaps>=0.0.5",
]
